--- a/SMS_Presentation/Views/Venda/IncluirPedidoVenda.cshtml
+++ b/SMS_Presentation/Views/Venda/IncluirPedidoVenda.cshtml
@@ -146,12 +146,12 @@
                                                     @Html.HiddenFor(m => m.PEVE_DT_CRIACAO_PROPOSTA)
                                                     @Html.HiddenFor(m => m.PEVE_DT_PREVISTA)
                                                     @Html.HiddenFor(m => m.PEVE_DT_DATA)
-                                                    <div class="col-lg-3 col-md-3 col-xs-12">
+                                                    <div class="col-lg-4 col-md-4 col-xs-12">
                                                         Cliente*
                                                         @Html.DropDownListFor(m => m.CLIE_CD_ID, (SelectList)ViewBag.Cliente, "Selecionar", new { @class = "form-control", autofocus = true })
                                                         @Html.ValidationMessageFor(m => m.CLIE_CD_ID, "", new { @style = "color:red" })
                                                     </div>
-                                                    <div class="col-lg-3 col-md-3 col-xs-12">
+                                                    <div class="col-lg-2 col-md-2 col-xs-12">
                                                         Filial*
                                                         @Html.DropDownListFor(m => m.FILI_CD_ID, (SelectList)ViewBag.Filiais, "Selecionar", new { @class = "form-control", autofocus = true, @id = "fili", onchange = "FilialChange()" })
                                                         @Html.ValidationMessageFor(m => m.FILI_CD_ID, "", new { @style = "color:red" })
@@ -163,7 +163,7 @@
                                                     </div>
                                                     @if (ViewBag.StatusVenda == 2)
                                                     {
-                                                        <div class="col-lg-3 col-md-3 col-xs-12">
+                                                        <div class="col-lg-2 col-md-2 col-xs-12">
                                                             Frete*
                                                             @Html.TextBoxFor(m => m.PEVE_VL_FRETE, new { @class = "form-control", autofocus = true })
                                                             @Html.ValidationMessageFor(m => m.PEVE_VL_FRETE, "", new { @style = "color:red" })
@@ -214,21 +214,21 @@
                                                         @Html.TextBoxFor(m => m.PEVE_NM_NOME, new { @class = "form-control", autofocus = true })
                                                         @Html.ValidationMessageFor(m => m.PEVE_NM_NOME, "", new { @style = "color:red" })
                                                     </div>
-                                                    <div class="col-lg-3 col-md-3 col-xs-12">
+                                                    <div class="col-lg-2 col-md-2 col-xs-12">
                                                         Número*
                                                         @Html.TextBoxFor(m => m.PEVE_NR_NUMERO, new { @class = "form-control", autofocus = true })
                                                         @Html.ValidationMessageFor(m => m.PEVE_NR_NUMERO, "", new { @style = "color:red" })
                                                     </div>
-                                                    <div class="col-lg-3 col-md-3 col-xs-12">
+                                                    <div class="col-lg-2 col-md-2 col-xs-12">
                                                         Data de Validade*
-                                                        @Html.TextBoxFor(m => m.PEVE_DT_VALIDADE, "{0:dd/MM/yyyy}", new { @class = "form-control date-picker", autofocus = true })
+                                                        @Html.TextBoxFor(m => m.PEVE_DT_VALIDADE, "{0:dd/MM/yyyy}", new { @class = "form-control date-picker", autofocus = true, @id="d1" })
                                                         @Html.ValidationMessageFor(m => m.PEVE_DT_VALIDADE, "", new { @style = "color:red" })
                                                     </div>
                                                     @if (ViewBag.StatusVenda == 1)
                                                     {
-                                                        <div class="col-lg-3 col-md-3 col-xs-12">
+                                                        <div class="col-lg-2 col-md-2 col-xs-12">
                                                             Data Prevista*
-                                                            @Html.TextBoxFor(m => m.PEVE_DT_PREVISTA_OPORTUNIDADE, "{0:dd/MM/yyyy}", new { @class = "form-control date-picker", autofocus = true })
+                                                            @Html.TextBoxFor(m => m.PEVE_DT_PREVISTA_OPORTUNIDADE, "{0:dd/MM/yyyy}", new { @class = "form-control date-picker", autofocus = true, @id="d2" })
                                                             @Html.ValidationMessageFor(m => m.PEVE_DT_PREVISTA_OPORTUNIDADE, "", new { @style = "color:red" })
                                                         </div>
                                                     }
@@ -830,6 +830,8 @@
             $("#cpf").mask("999.999.999-99");
             $("#cnpj").mask("99.999.999/9999-99");
             $("#cep").mask("99999-999");
+            $("#d1").mask("99/99/9999");
+            $("#d2").mask("99/99/9999");
         });
     </script>
 
